--- a/style.css
+++ b/style.css
@@ -87,3 +87,25 @@ section{
 #todo-field{
     margin-top: 4rem;
 }
+
+.hide{
+    animation-name: hide;
+    animation-duration: .3s;
+    animation-iteration-count: 1;
+    animation-timing-function: ease;
+    animation-direction:alternate;
+    animation-fill-mode: forwards;
+}
+
+@keyframes hide{
+    0%{
+        height: 3.5rem;
+        opacity: 1;
+    }
+    100%{
+        height: 0;
+        opacity: 0;
+        margin: 0;
+        padding: 0;
+    }
+}
