--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ nav{
 }
 
 nav input[type = text]{
-    width: min(75vw, 45rem);
+    width: min(90vw, 45rem);
     height: 3.5rem;
     margin-bottom: 1rem;
 }
@@ -60,24 +60,40 @@ section{
     justify-content: center;
 }
 
+.todo-label{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: .4rem;
+}
+
+.todo-label:hover{
+    cursor: pointer;
+}
+
 .new-todo{
     margin-bottom: 1rem;
     border-radius: 5px;
     background-color:var(--secondary-light-color);
     color: #000;
-    width: min(75vw, 45rem);
-    height: 3.5rem;
-    overflow-wrap: break-word;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-inline: 1rem;
-    
+    padding-block: 1rem;
+    font-size: clamp(1rem, 2.5vw, 1.2rem);
+    width: min(90vw, 45rem);
+}
+
+#check-box{
+    width: 1.2rem;
+    height: 1.2rem;
 }
 
 .new-dlt-btn{
     height: 1rem;
     width: 1rem;
+    justify-self: flex-end;
 }
 
 .new-dlt-btn:hover{
