--- a/style.css
+++ b/style.css
@@ -26,11 +26,6 @@ picture{
     cursor: pointer;
 }
 
-body{
-    height: 100vh;
-    color: #fff;
-}
-
 .icon{
     width: 3rem;
     height: 3rem;
@@ -47,7 +42,7 @@ nav{
     height: 45vh;
     grid-template-rows: 2fr 1fr;
     position: relative;
-    background: linear-gradient(black, var(--primary-dark-color));
+    background: linear-gradient(#222 98%, #fff);
 }
 
 .bg-main-img{
@@ -67,15 +62,9 @@ nav form{
 nav input[type = text]{
     width: min(90vw, 45rem);
     height: 3.5rem;
-    border: 2px solid #333;
 }
 
 /*Main*/
-
-main{
-    background:linear-gradient(to bottom, var(--primary-dark-color), var(--primary-light-color) );
-    height: 100vh;
-}
 
 .links{
     display: flex;
@@ -85,7 +74,7 @@ main{
 }
 
 .links span{
-    border-bottom: 2px solid #fff;
+    border-bottom: 2px solid #000;
     padding: .5rem;
     font-size: 1.1rem;
 }
@@ -105,17 +94,16 @@ section{
 }
 
 .new-todo{
-    margin-bottom: 1rem;
     border-radius: 5px;
     background-color:var(--secondary-light-color);
     color: #000;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-inline: 1rem;
-    padding-block: 1rem;
     font-size: clamp(1rem, 2.5vw, 1.2rem);
     width: min(90vw, 45rem);
+    padding: 1rem;
+    margin-bottom: .5rem;
 }
 
 #check-box{
@@ -131,23 +119,13 @@ section{
 
 .hide{
     animation-name: hide;
-    animation-duration: .4s;
-    animation-iteration-count: 1;
-    animation-timing-function: ease;
-    animation-direction:alternate;
+    animation-duration: .3s;
     animation-fill-mode: forwards;
+    animation-timing-function: ease-in;
 }
 
 @keyframes hide{
-    0%{
-        height: 3.5rem;
-        opacity: 1;
-    }
     100%{
-        height: 0;
         opacity: 0;
-        margin: 0;
-        padding: 0;
-        display: none;
     }
 }
